Updates for QA 11442 (#211)
* LiveLabs #3683 QA updates

* Updated QA files

* fixed missing copy tag

* fixed image redaction

* screenshot reupload

* wid: 936 QA

* Update access-apex.md

* fixing file names

* fixing file names

* removed PII

* WMS 4981 QA

* QA 4981 fixed prerequisite mismatch

* Update create-project-sandbox.md

* WMS 4361 QA

* WMS 4361 QA

* WMS 4361 update

* WMS 708 QA

* WMS 708 QA

* WMS 11388

* broken image fix

* QA WID 800

* WID 936 QA

* fixed markdown

* markdown troubleshooting

* try again

* fixed marksdown

* spatial ai qa

* 11694 QA

* 11694 QA

* WMS ID 11623 QA

* Revert "WMS ID 11623 QA"

This reverts commit ffa1b10b80ad92653dfb9d6b141e9cdabb5aacaa.

* WMS ID 11623

* WID 770 QA

* WID 770 QA

* WID 770 QA

* Updating screenshots

* WMS 11390 updating for brown button

* WMS 11390 updating for brown button

* HOL updates WMS ID 4981

* updates to HOL for AI World

* HOL16 updates

* Revert "HOL16 updates"

This reverts commit fd786e3b2befd2c7c2e02c062f46bae576dcfa32.

* Reapply "HOL16 updates"

This reverts commit 1e686ffbb7a0315e56d7846445f549240020c1fc.

* remove unused files from HOL16

* 11908 updates

* Update query-graph-v2.md

* 11908

* Update query-graph-v2.md

* HOL 2813

* WMS 11623 QA

* QA 11623

* WMS 11623

* 26ai updates

* WMS 11694 26ai updates

* update stack link

* missing reference to AI database

* Updated terraform and 26ai changes

* Updates for WMS 11442

* Updates for WMS 11442

--- a/adb-graph/moviestream-graph/workshop/tenancy/manifest.json
+++ b/adb-graph/moviestream-graph/workshop/tenancy/manifest.json
@@ -4,7 +4,7 @@
     "include": {
      "iam-compartment-create-body.md":"https://oracle-livelabs.github.io/common/building-blocks/tasks/iam/compartment-create-body.md",
      "adb-goto-graph-studio.md":"https://oracle-livelabs.github.io/common/building-blocks/tasks/adb/goto-graph-studio.md",
-     "adb-create-graph.md":"https://oracle-livelabs.github.io/common/building-blocks/tasks/adb/create-graph.md"
+     "adb-create-graph-pgql.md":"https://oracle-livelabs.github.io/common/building-blocks/tasks/adb/create-graph-pgql.md"
     },
     "variables": ["./variables.json"],
     "tutorials": [
@@ -33,7 +33,7 @@
         },
         {
             "title": "Lab 4: Clean-up",
-            "description": "Destroyed environement created in setup ",
+            "description": "Destroyed environment created in setup ",
             "filename": "../../destroy-environment/destroy-environment.md"
         },
         {
