WMS ID 11388 QA (#213)
* LiveLabs #3683 QA updates

* Updated QA files

* fixed missing copy tag

* fixed image redaction

* screenshot reupload

* wid: 936 QA

* Update access-apex.md

* fixing file names

* fixing file names

* removed PII

* WMS 4981 QA

* QA 4981 fixed prerequisite mismatch

* Update create-project-sandbox.md

* WMS 4361 QA

* WMS 4361 QA

* WMS 4361 update

* WMS 708 QA

* WMS 708 QA

* WMS 11388

* broken image fix

* QA WID 800

* WID 936 QA

* fixed markdown

* markdown troubleshooting

* try again

* fixed marksdown

* spatial ai qa

* 11694 QA

* 11694 QA

* WMS ID 11623 QA

* Revert "WMS ID 11623 QA"

This reverts commit ffa1b10b80ad92653dfb9d6b141e9cdabb5aacaa.

* WMS ID 11623

* WID 770 QA

* WID 770 QA

* WID 770 QA

* Updating screenshots

* WMS 11390 updating for brown button

* WMS 11390 updating for brown button

* HOL updates WMS ID 4981

* updates to HOL for AI World

* HOL16 updates

* Revert "HOL16 updates"

This reverts commit fd786e3b2befd2c7c2e02c062f46bae576dcfa32.

* Reapply "HOL16 updates"

This reverts commit 1e686ffbb7a0315e56d7846445f549240020c1fc.

* remove unused files from HOL16

* 11908 updates

* Update query-graph-v2.md

* 11908

* Update query-graph-v2.md

* HOL 2813

* WMS 11623 QA

* QA 11623

* WMS 11623

* 26ai updates

* WMS 11694 26ai updates

* update stack link

* missing reference to AI database

* Updated terraform and 26ai changes

* Updates for WMS 11442

* Updates for WMS 11442

* 11442 updates to destroy environment lab

* WMS ID 11388 QA

* Update prepare-data.md

* WMS 3400 QA

--- a/adb-graph/getting-started-with-graph-studio/workshops/sandbox/manifest.json
+++ b/adb-graph/getting-started-with-graph-studio/workshops/sandbox/manifest.json
@@ -21,7 +21,7 @@
         },
         {
             "title": "Lab 1: Provision an ADB Instance",
-            "description": "Provisioning an Autonomous Database Instance",
+            "description": "Provisioning an Autonomous AI Database Instance",
             "type": "freetier",
             "filename": "https://oracle-livelabs.github.io/common/building-blocks/blocks/adb/provision/provision-console.md"
         },
@@ -35,7 +35,7 @@
             "filename": "../../create-graph-from-sh-tables/create-graph-from-sh-tables.md"
         },
         {
-            "title": "Lab 4: Analyze a Data Warehouse",
+            "title": "Lab 4: Analyze a Lakehouse",
             "filename": "../../run-graph-algorithms-on-data-warehouse/run-graph-algorithms-on-data-warehouse.md"
         },
         {
